[change] diagnostic message doesn't contain path to file anymore & column number is now inferred from the message | #BAZEL-51 fixed (#238)
* diagnostics for BUILD files

* diagnostics for compiler

* column number should be correct now

* changelog

* testcase for `tryCollectLinesMatchingIssueDetails`

* review fix